[gd_scene load_steps=7 format=3 uid="uid://b51lu5m147t1r"]

[ext_resource type="Script" uid="uid://b0pxl303ajgou" path="res://scenes/main.gd" id="1_tbgi4"]
[ext_resource type="PackedScene" uid="uid://chpapn8713n38" path="res://scenes/snake_segment.tscn" id="2_tefeu"]
[ext_resource type="Texture2D" uid="uid://b7n7kemkttijr" path="res://assets/bg.png" id="3_tipki"]
[ext_resource type="PackedScene" uid="uid://drpbfywofy17x" path="res://scenes/score_panel.tscn" id="4_85g3d"]
[ext_resource type="Texture2D" uid="uid://t8wfabcha3wu" path="res://assets/apple.png" id="5_choun"]
[ext_resource type="PackedScene" uid="uid://hsyimqrs43b3" path="res://scenes/game_over_menu.tscn" id="6_ya4ey"]

[node name="Main" type="Node"]
script = ExtResource("1_tbgi4")
snake_scene = ExtResource("2_tefeu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(502, 503)
texture = ExtResource("3_tipki")
offset = Vector2(0, 50)

[node name="ScorePanel" parent="." instance=ExtResource("4_85g3d")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Food" type="Sprite2D" parent="."]
texture = ExtResource("5_choun")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_ya4ey")]

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
